# textgridde-rs

./: Cargo.toml  LICENSE  README.adoc  clippy.toml
.github/: LICENSE
example/: long.TextGrid  short.TextGrid
src/: input.rs  interval.rs  lib.rs  point.rs  textgrid.rs  utilities.rs
