[package]
name = "textgridde-rs"
version = "0.1.0"
edition = "2021"
description = "A library for dealing with Praat TextGrid files."
authors = ["Caleb Long <cmlong02@outlook.com>"]
license = "MIT"
repository = "https://github.com/cmlong02/texgridde"
readme = "README.adoc"
keywords = [
    "praat",
    "textgrid",
    "text",
    "grid",
    "phonetics",
    "linguistics",
    "file-format",
]
categories = ["text-processing", "audio-processing", "linguistics"]

[dependencies]
regex = "^1"
getset = "^0.1"
derive_more = "^0.99"
